src/client/css/printful.css
:host {
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: auto;
	z-index: 10000;
	display: flex;
	align-items: center;
	justify-content: center;
	top: 0px;
	left: 0px;
	background-color: var(--theme-popup-outer-bg-color);
	cursor: pointer;
	user-select: none;
	--harmony-2d-manipulator-bg-color: rgba(0, 0, 0, 0);
}

button {
	cursor: pointer;
}

.printful-client {
	/*position: absolute;*/
	background-color: rgba(0, 0, 0, 0.5);
	height: 100%;
	width: 100%;
	z-index: 1000;
	color: var(--theme-text-color);
}

.printful-client-close {
	position: absolute;
	top: 0px;
	right: 0px;
	fill: currentColor;
	cursor: pointer;
}

.printful-client-close>svg {
	width: 20px;
	margin: 5px;
}

.printful-client-canvas {
	position: relative;
	position: absolute;
	/*width: 100%;
	height: 100%;*/
	display: inline-block;
	transform-origin: top left;
	/*transform-origin: center top;*/
}

.printful-client-canvas>* {
	position: absolute;
	top: 0px;
	left: 0px;
}

.printful-client-canvas>*:first-child {
	position: relative;
}

.printful-template-2 {
	display: flex;
	/*justify-content: center;*/
	overflow: hidden;
	position: relative;
	flex: 1;
}

.printful-canvas-controls {
	position: absolute;
	pointer-events: none;
}

.printful-canvas-controls>* {
	pointer-events: all;
}

.printful-client button,
.printful-client select {
	cursor: pointer;
}

.printful-client select {
	font-size: 1.2rem;
}

.printful-create-template,
.printful-enable-enable_notifications {
	width: 50%;
	display: block;
	margin: 1rem auto;
	font-size: 1.5rem;
	padding: 0.5rem;
}

.product-tab {
	display: flex;
	flex-direction: row;
}

.categories {
	flex: 0 0 300px;
}

.products {
	overflow: auto;
	display: flex;
	gap: 1rem;
	flex-wrap: wrap;
	justify-content: center;
}

.printful-template-tab label {
	display: block;
	margin: 0.2rem;
	display: flex;
	font-size: 1.2rem;
}

.printful-template-tab label>span {
	margin-right: 1rem;
}

.printful-template-tab label>* {
	flex: 1;
}

.printful-template-container {
	width: 100%;
	height: 100%;
	display: flex;
}

.printful-product {
	display: flex;
}

.printful-product-image {
	max-height: 300px;
}

.printful-product-description-price {
	flex: 1;
	user-select: text;
}

.printful-product-description {
	font-size: 1.2rem;
	margin: 0.5rem;
}

.printful-product .title {
	font-weight: 800;
	font-size: 2rem;
	margin: 0.5rem;
}

.printful-product .sizes,
.printful-product .colors {
	font-size: 1.2rem;
	margin: 0.5rem;
}

.printful-product-price {
	font-weight: 800;
	font-size: 1.7rem;
	margin: 0.5rem;
}

.printful-product-created {
	padding: 0.5rem;
	font-size: 1.5rem;
}

.printful-products-list {
	display: flex;
	flex-direction: column;
	padding: 0.5rem;
	gap: 0.5rem;
}

.inner-panel {
	height: 90%;
	width: 90%;
}

.printful-template-controls {
	display: flex;
	flex-direction: column;
	flex: 0.5;
	font-size: 1.5rem;
}

.printful-template-controls label>span {
	flex: 1;
}

.printful-template-controls harmony-switch {
	flex: auto;
}

.lock-controls {
	flex: 0;
}

.basic-controls {
	--h-slider-label-width: 10rem;
	display: flex;
	flex-direction: column;
	gap: 0.2rem;
}

.basic-controls.locked {
	opacity: 0.5;
	pointer-events: none;
}

.basic-controls label {
	display: flex;
	align-items: center;
	padding: 0.2rem;
}

.camera-controls {
	padding: 1.5rem;
}

.camera-controls>div {
	display: flex;
}

.camera-control {
	flex: 1;
}

.camera-control>svg {
	width: 100%;
	height: auto;
}

.create-product {
	appearance: none;
	font-size: 2rem;
	padding: 0.5rem;
	background-color: #08ba03;
	;
}

.remove-placement,
.regenerate-placement {
	font-size: 1.5rem;
	padding: 0.5rem;
}

.reset-controls {
	gap: 1rem;
}

.reset-controls>button {
	flex: 1;
	font-size: 1.5rem;
	padding: 0.5rem;
}

.toggle-grid {
	position: absolute;
	top: 1rem;
	left: 1rem;
	width: 4rem;
	height: 4rem;
	z-index: 1000;
	color: black;
	border-radius: 1rem;
	border: solid 0.2rem;
	border-color: #bccbd9;
}

.toggle-grid.on {
	background-color: #4affff;
}

.toggle-grid svg {
	width: 100%;
	height: auto;
}

.placement-source {
	position: absolute;
	top: 1rem;
	right: 1rem;
	z-index: 1000;
}

.placements {
	width: 100%;
	box-sizing: border-box;
	flex: 0 0 auto;
}

.placements button {
	display: flex;
	padding: 0.5rem 2rem;
}

.placements button * {
	flex: 0;
}

.placements button .title-price {
	flex: 1;
	display: flex;
	gap: 1rem;
}

.placements button .title {
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.5rem;
	text-wrap: nowrap;
}

.placements button[disabled] .title {
	color: black;
}

.placements button .price {
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.2rem;
	color: #24e724;
}

.colors {
	display: flex;
	gap: 0.2rem;
	max-width: 40rem;
	flex-wrap: wrap;
}

.color {
	width: 1.5rem;
	height: 1.5rem;
	display: inline-block;
	border-radius: 0.4rem;
	border: 2px solid;
}

harmony-switch {
	width: 100%;
}

.product-title-price {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
}

.product-title,
.product-price {
	font-size: 2rem;
}

harmony-tab.templates {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	padding: 1rem;
}

